alteracao apontamento
