# src/routes/produtoRoute.js
@@ -1,12 +1,7 @@
 const produto = require('../controllers/produtoController');
 
 module.exports = (app) => {
-  app.post('/cadastrar-produto/', produto.cadastrarProduto
-    /*#swagger.tags = ['Produto']
-    #swagger.summary = 'Cadastro de Produto'
-    #swagger.description = 'Teste de descricao'
-    */
-  )
+  app.post('/cadastrar-produto/', produto.cadastrarProduto)
   app.get('/get-produto/', produto.getProduto)
   app.patch('/update-produto/', produto.updateProduto)
   app.delete('/delete-produto/:id', produto.deleteProduto)
